--- a/sten-saks-papir-l-sning-master/package.json
+++ b/sten-saks-papir-l-sning-master/package.json
@@ -1,17 +1,15 @@
 {
-  "name": "nodejs-express-p5-template",
+  "name": "sten-saks-papir-socket",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "simon moe",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
-    "ip": "^1.1.8",
-    "socket.io": "^4.5.2",
-    "ws": "^8.8.1"
-  }
+    "socket.io": "^4.5.2"
+  },
+  "description": ""
 }
